--- a/_output.yml
+++ b/_output.yml
@@ -3,7 +3,7 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">Omics Data Analysis course</a></li>
+        <li class="toc-logo"><a href="./"><img src="images/course_logo_v2.png"></a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit: https://github.com/USERNAME/REPO/edit/BRANCH/%s
@@ -20,3 +20,4 @@ sharing:
       facebook: no
       twitter: yes
       all: no
+      
